--- a/src/App.css
+++ b/src/App.css
@@ -407,7 +407,9 @@ h2 {
   color: var(--heading-color);
 }
 .testimonial--section--card {
+  background-color: #ffffff;
   display: flex;
+  box-shadow: 1px 1px 3px #006b6a55;
   padding: 42.6px;
   flex-direction: column;
   align-items: flex-start;
